<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop = "@dimen/layout_margin_top"
        android:layout_marginBottom = "@dimen/layout_margin_bottom"
        android:layout_marginVertical="16dp"
        android:orientation = "vertical"
        android:gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tetris_title"
            android:textSize = "80sp"/>

        <TextView
            android:id="@+id/text_view_max_score"
            android:text="@string/max_score_default"
            android:textSize="20sp"
            android:layout_marginTop="@dimen/layout_margin_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:id="@+id/button_new_game"
                android:text="@string/new_game"

                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>
            <Button
                android:id="@+id/button_reset_score"
                android:text="@string/reset_score"

                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>
            <Button
                android:id="@+id/button_exit"
                android:text="@string/exit"

                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>